Home and Get Started page
Added Digital Design Nizam content on home page. Set up a basic get started page.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,46 +1,53 @@
 ---
-title: Welcome to Starlight
+title: Welcome to Digital Design Nizam
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
   title: |
-    Welcome to Starlight with
-    <span
-      class="font-black text-transparent
-        bg-clip-text bg-gradient-to-b
-        from-accent-700 to-accent-400
-        dark:from-accent-500 dark:to-accent-200"
-    >
-      Tailwind
-    </span>
-  tagline: Congrats on setting up a new Starlight project!
+    Digital Design Nizam
+    
+  tagline: All Pakistan Government Digital Design System for Web and Mobile Applications, An open source-design system by Code for Pakistan.
+
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/ddn.png
+
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Get Started
+      link: /guides/getting-started/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
+
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Jump to section
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+<CardGrid >
+	<Card title="Styles" icon="pencil">
+		Learn about our design tokens, colors, typography and other foundational styles in the [Styles guide](/guides/styles/).
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	<Card title="Layout" icon="setting">
+		Explore layout patterns, grids, and spacing guidelines in our [Layout documentation](/guides/layout/).
 	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
+	<Card title="Components" icon="add-document">
+		Browse our library of reusable UI components with examples and usage guidelines in the [Components section](/guides/components/).
 	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="Examples" icon="open-book">
+		See complete examples and code samples of common UI patterns in our [Examples gallery](/guides/examples/).
 	</Card>
 </CardGrid>
+
+## About the project
+
+A design system is a collection of reusable components, guided by clear standards, that can be combined to build a wide range of applications.
+
+For governments, a well-crafted design system ensures consistency, accessibility, and user-friendliness across all citizen-facing digital services.
+
+At <a href="https://codeforpakistan.org" target="_blank">Code for Pakistan</a>, we are developing a design system that has the potential to become the standard for all digital services in Pakistan. Currently, it is used internally for building digital products for various government departments and the public. We also advocate for its adoption by technology units within the government.
+
+Governments exist to serve their people, and a strong design system helps them do that more effectively.
+
+
+## Contributors
+
+Ahmad Shafiq Zia, Ali Raza, Ammaz Khan, Azeem Abbas, Hassaan Bin Masham, Latif Nizamani, Masna Bin Umeed, Shaji Ahmed
